examples/anthos-vmware-to-eks/manifests/before/checkout/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: checkout-ingress
  namespace: checkout
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: checkout-cert
    cloud.google.com/backend-config: '{"default":"checkout-bc"}'
spec:
  rules:
    - host: shop.acme.example
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: checkout-web
                port: { number: 80 }
---
apiVersion: v1
kind: Service
metadata:
  name: checkout-web
  namespace: checkout
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default":"checkout-bc"}'
spec:
  type: ClusterIP
  ports: [{ name: http, port: 80, targetPort: 8080 }]
  selector: { app: checkout-web }
